Fixed the wrong background color.

--- a/atom/obsidian-syntax/index.less
+++ b/atom/obsidian-syntax/index.less
@@ -1,6 +1,5 @@
 .editor, .editor .gutter {
-  //background-color: #3F4B4E;
-  background-color: #040404;
+  background-color: #3F4B4E;
   color: #81969A;
 }
 
@@ -18,12 +17,10 @@
 
 .text {
   color: #E0E2E4;
-  //background-color: #293134;
 }
 
 .source {
   color: #E0E2E4;
-  //background-color: #293134;
 }
 
 .comment {
